SERVER-106205 Convert double values to the appropriate int64_t value according to the FTDC extraction spec (#43516)

GitOrigin-RevId: aef00985ef02e59e98d099b8238de68a4b49240d